# rest-client

./: CMakeLists.txt  README.md  build.sh  prompts.md
agents/: CLI-dev.agent  REST-API-client.agent  doc.agent  test-error.agent
include/: curl_utils.h  user_stats.h
python/: collect_test_data.py
src/: curl_utils.cpp  main.cpp  user_stats.cpp
tests/: user_stats_test.cpp
